--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "rich>=14.2.0",
+    "InquirerPy>=0.3.4",
+    "pyperclip>=1.11.0",
 ]
